fix makefile and generate openapi
