# gen/openapi/common/models.gen.go
@@ -1,0 +1,45 @@
+// Package common provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.2.0 DO NOT EDIT.
+package common
+
+import (
+	"time"
+)
+
+// ErrorResponse defines model for ErrorResponse.
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
+// SuccessResponse defines model for SuccessResponse.
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
+
+// Todo defines model for Todo.
+type Todo struct {
+	Content   *string    `json:"content,omitempty"`
+	CreatedAt *time.Time `json:"created_at,omitempty"`
+	Id        *uint      `json:"id,omitempty"`
+	Title     *string    `json:"title,omitempty"`
+	UpdatedAt *time.Time `json:"updated_at,omitempty"`
+}
+
+// TodoCreateRequest defines model for TodoCreateRequest.
+type TodoCreateRequest struct {
+	Content string `json:"content"`
+	Title   string `json:"title"`
+}
+
+// TodoUpdateRequest defines model for TodoUpdateRequest.
+type TodoUpdateRequest struct {
+	Content string `json:"content"`
+	Title   string `json:"title"`
+}
+
+// CreateTodoJSONRequestBody defines body for CreateTodo for application/json ContentType.
+type CreateTodoJSONRequestBody = TodoCreateRequest
+
+// UpdateTodoJSONRequestBody defines body for UpdateTodo for application/json ContentType.
+type UpdateTodoJSONRequestBody = TodoUpdateRequest
